--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
     <meta charset="UTF-8">
-    <title>用户首页</title>
+    <title>用户首页测试</title>
     <!-- 被引用的模板片段应用了 commons.css 中的样式时，在引用的模块中必须导入进来-->
     <link type="text/css" rel="stylesheet" th:href="@{/css/commons.css}">
     <!-- 这是本文件自己的样式文件-->
